# orjson

./: .bazelrc  BUILD.bazel  BUILD.orjson-3.4.3.bazel  WORKSPACE  orjson_defs.bzl  orjson_deps.bzl  pyproject.toml  python.bzl  testor.py
cargo/: BUILD.bazel  Cargo.toml  crates.bzl
cargo/cargo/: BUILD.bazel
cargo/remote/: BUILD.associative-cache-1.0.1.bazel  BUILD.bytecount-0.6.0.bazel  BUILD.bytecount-0.6.1.bazel  BUILD.bytecount-0.6.2.bazel  BUILD.encoding_rs-0.8.24.bazel  BUILD.encoding_rs-0.8.26.bazel  BUILD.getrandom-0.1.15.bazel  BUILD.inlinable_string-0.1.11.bazel  BUILD.inlinable_string-0.1.13.bazel  BUILD.inlinable_string-0.1.14.bazel  BUILD.lexical-core-0.7.4.bazel  BUILD.libc-0.2.80.bazel  BUILD.libm-0.1.4.bazel  BUILD.once_cell-1.5.2.bazel  BUILD.packed_simd_2-0.3.4.bazel  BUILD.rand_core-0.5.1.bazel  BUILD.serde-1.0.117.bazel  BUILD.serde-1.0.118.bazel  BUILD.serde_derive-1.0.117.bazel  BUILD.serde_json-1.0.53.bazel  BUILD.serde_json-1.0.59.bazel  BUILD.smallvec-1.4.2.bazel  BUILD.smallvec-1.5.0.bazel  BUILD.smallvec-1.5.1.bazel  BUILD.syn-1.0.48.bazel  BUILD.syn-1.0.50.bazel  BUILD.syn-1.0.52.bazel  BUILD.wyhash-0.4.2.bazel
src/: ffi.rs  lib.rs  typeref.rs  util.rs
src/serialize/: encode.rs  writer.rs
