[project]
name = "orjson"
repository = "https://github.com/ijl/orjson"

[build-system]
build-backend = "maturin"
requires = ["git+https://github.com/PyO3/maturin.git@master#egg=maturin"]

[tool.maturin]
manylinux = "off"
sdist-include = ["Cargo.lock", "json/**/*"]
strip = "on"
cargo-extra-args =
rustc-extra-args = 
bindings = 

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
