[package]
name = "dummy"
version = "0.0.0"
edition = "2018"

[lib]
name = "orjson"
path = "src/lib.rs"

[package.metadata.raze]
workspace_path = "//cargo"
targets = [
    #"i686-apple-darwin",
    #"i686-pc-windows-msvc",
    #"i686-unknown-linux-gnu",
    #"x86_64-apple-darwin",
    #"x86_64-apple-ios",
    #"x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    #"aarch64-apple-ios",
]
genmode = "Remote"
default_gen_buildrs = true
#output_buildfile_suffix = "BUILD.bazel"


#[package.metadata.raze.crates.pyo3.'*']
#data_attr = "glob([\"**\"])"

#[package.metadata.raze.crates.ring.'*']
#data_attr = "glob([\"src/**\"])"

#[#package.metadata.raze.crates.webpki.'*']
#data_attr = "glob([\"src/**\"])"

[dependencies]
rand_core = { version = "0.5", features = ["std"] } 
associative-cache = { version = "1" }
bytecount = { git = "https://github.com/ijl/orjson.git", tag = "3.4.3", features = ["generic-simd", "runtime-dispatch-simd"]  }
#reqwest = { git = "https://github.com/ankitects/reqwest.git", tag = "anki-2020-11-03", default-features = false, features = ["json", "socks"] }
encoding_rs = { git = "https://github.com/ijl/orjson.git", tag = "3.4.3", default_features = false }
#encoding_rs = { git = "https://github.com/ijl/orjson.git", tag = "3.4.3", default_features = false, features = ["simd-accel"] }
inlinable_string = { version = "0.1" }
itoa = { version = "0.4", default_features = true, features = ["std", "i128"] }
once_cell = { version = "1"}
#pyo3 = { version = "0.12", default_features = false, features = ["extension-module"]}
ryu = { version = "1" }
serde = { version = "1", default_features = false, features = ["std", "derive"] }
serde_json = { git = "https://github.com/ijl/orjson.git", tag = "3.4.3", default_features = false, features = ["std"]  }
#serde_json = { version = "1", default_features = false, features = ["std"] }
smallvec = { version = "1", default_features = false, features = ["const_generics", "union", "specialization", "write"] }
wyhash = { version = "0.4" }
# test to valid created build.bazel,no rust_library ,only buildscript
# orjson = { git = "https://github.com/ijl/orjson.git", tag = "3.4.3"}
syn = { version = "1.0", default_features = false, features = ["clone-impls", "default", "derive",  "extra-traits", "fold", "full", "parsing", "printing", "proc-macro", "quote",  "visit", "visit-mut"] }


[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "i686", target_arch = "armv7"))'.dependencies]
encoding_rs = { git = "https://github.com/ijl/orjson.git", tag = "3.4.3", default_features = false, features = ["simd-accel"] }


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

